Update SVLJmTLSClientValidatorFilter.class.java
version 0.3